<resources>
    <string name="app_name">清华选课</string>
    <string name="app_author">xalanq</string>
    <string name="app_email">xalanq@gmail.com</string>
    <string name="app_github">github.com/xalanq/CourseHelper</string>
    <string name="app_blog">blog.xalanq.com</string>
    <string name="app_version">v1.0</string>

    <string name="about_author">作者：<a href="http://blog.xalanq.com">xalanq</a></string>
    <string name="about_github">GitHub主页：<a href="https://github.com/xalanq/CourseHelper">xalanq/CourseHelper</a></string>
    <string name="about_update">检查更新</string>
    <string name="about_feedback">反馈问题</string>

    <string name="main_navigation_drawer_open">Open main_navigation drawer</string>
    <string name="main_navigation_drawer_close">Close main_navigation drawer</string>
    <string name="main_navigation_menu_kebiao">课表</string>
    <string name="main_navigation_menu_guanzhu">关注</string>
    <string name="main_navigation_menu_yiji">一级选课</string>
    <string name="main_navigation_menu_erji">二级选课</string>
    <string name="main_navigation_menu_tuike">退课</string>
    <string name="main_navigation_menu_pf">选择P/F</string>
    <string name="main_navigation_menu_settings">设置</string>
    <string name="main_navigation_menu_update">更新数据库</string>
    <string name="main_navigation_menu_about">关于</string>
    <string name="main_navigation_login">登录</string>
    <string name="main_navigation_logout">注销</string>
    <string name="main_navigation_username1">萌萌哒的</string>
    <string name="main_navigation_username2">~</string>

    <string name="login_title">登录</string>
    <string name="login_username">用户名/学号</string>
    <string name="login_password">密码</string>
    <string name="login_username_empty">用户名不能为空！</string>
    <string name="login_password_empty">密码不能为空！</string>
    <string name="login_ing">登录中...</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">用户名或密码错误</string>
    <string name="login_network">网络异常</string>
    <string name="login_sign_in">走你</string>
    <string name="login_declaration">声明：\n1. 本软件只会加密存储密码在本地，且该密码仅用于“自动保存密码”功能。\n2. 本软件不会存储、泄露任何个人信息到服务器上（因为本来就没有服务器）。</string>

    <string name="logout_message">你确定要退出当前账号吗？</string>
    <string name="logout_positive">嗯...</string>
    <string name="logout_negative">不！手残！</string>

    <string name="main_dialog_update_title">更新所有课程数据</string>
    <string name="main_dialog_update_message">是否要更新所有课程的数据？这可能会花费较长时间。</string>
    <string name="main_dialog_update_positive">更新</string>
    <string name="main_dialog_update_negative">取消</string>

    <string name="main_updating">更新中</string>
    <string name="main_double_click_to_exit">再按一次退出</string>

    <string name="toolbar_menu_refresh">刷新</string>

    <string name="kebiao_dialog_update_title">更新课表</string>
    <string name="kebiao_dialog_update_message">是否要更新课表数据？</string>
    <string name="kebiao_dialog_update_positive">更新</string>
    <string name="kebiao_dialog_update_negative">取消</string>

</resources>
